_sass/_layout.scss
// Site Header
.site-header {
  border-top: .5rem $color-accent solid;
  border-bottom: .1rem $color-aux solid;
  background-color: $color-details;
  text-align: center;
  padding-top: $spacing-unit;
  padding-bottom: $spacing-unit / 2;

  .site-logo {
    margin-bottom: $spacing-unit / 2;
    img {
      max-height: 10rem;
    }
  }

  .site-title {
    font: 800 #{($base-font-size * 1.5)}/#{$base-line-height} $title-font-family;
    letter-spacing: -0.05em;
  }
}

// Site content
.site-content {
  padding-top: $spacing-unit;
}

.wrapper {
  max-width: calc(#{$content-width} - (#{$spacing-unit} * 2));
  padding-left: $spacing-unit;
  padding-right: $spacing-unit;
  margin-left: auto;
  margin-right: auto;

  @include media-query($on-palm) {
    max-width: calc(100% - (#{$spacing-unit}));
    padding-left: $spacing-unit / 2;
    padding-right: $spacing-unit / 2;
  }
}

.page {
  .page-header {
    .headline {
      font-size: $base-font-size * 1.3;
      text-align: center;
      font-style: italic;
    }

    .page-title {
      text-align: center;
      font-size: $base-font-size * 2;
    }
  }

  .page-content {
    .site-description {
      max-width: $spacing-unit * 15;
      text-align: center;
      margin: $spacing-unit * 2 auto;
    }
  }
}

/*
    Post Listing
*/
.post-list {
  @include row;
  width: 150%;
  margin-left: -25%;

  .post-card {
    @include col(1,2);
  }

  @include media-query(1120px) {
    width: 100%;
    margin-left: 0;

    .post-card {
      width: calc(100% + (#{$spacing-unit}));

      @include media-query($on-palm) {
        width: 100%;
      }
    }
  }
}

.post-card {
  position: relative;
  overflow: hidden;
  white-space: nowrap;
  margin-left: 0;

  @include media-query($on-palm) {
    margin-bottom: $spacing-unit;
  }

  & > a {
    line-height: 0;
  }

  img {
    vertical-align: middle;
    z-index: 1;
  }

  .post-info {
    position: absolute;
    z-index: 2;
    text-align: center;

    .post-meta {
      font-style: italic;
      font-size: $base-font-size * .75;
      color: $color-aux;
    }

    .post-title {
      margin-bottom: 0;
      font-weight: 800;
      font-size: $base-font-size * 1.2;
      line-height: 1.2;
    }

    @include media-query($on-palm) {
      position: relative;
    }

    @media screen and (min-width: $on-palm) {
      width: 95%;
      left: 2.5%;
      background: $color-background;
      top: calc(#{100%} - #{5rem});
      transition: top .6s ease;
      padding: $spacing-unit / 2 $spacing-unit / 2 $spacing-unit;
      box-sizing: border-box;
    }
  }

  &:hover,
  &:focus {
    .post-info {
      top: 60%;
    }
  }

  &.latest-post {
    .post-info {
      @media screen and (min-width: $on-palm) {
        width: 70%;
        left: 15%;
      }

      .post-title {
        font-size: $base-font-size * 1.5;
      }
    }
  }
}

.pagination-link {
  display: block;
  width: 100%;
  border-top: .3rem solid $color-text;
  padding-top: $spacing-unit;
  text-align: center;
  font-family: $title-font-family;
  text-transform: uppercase;
  letter-spacing: 0.1em;
  font-size: $base-font-size * .75;
  transition: all .36s ease;
  font-weight: 800;
  margin: 0 0 $spacing-unit;

  &:hover {
    border-top-color: $color-accent;
  }
}

/*
    Post
*/
.post {
  .post-cover {
    margin-left: -($spacing-unit / 2);
    width: calc(100% + #{$spacing-unit});
    margin-bottom: $spacing-unit / 2;

    img {
      max-width: 100%;
      height: auto;
    }
  }

  .post-title {
    font-size: $base-font-size * 2;
    line-height: 1.2;
  }

  .post-excerpt {
    color: $color-aux;
    font-size: $base-font-size * .95;
    margin-bottom: 0;
    font-style: italic;

    a {
      color: $color-aux;
    }
  }

  .post-header {
    padding-bottom: $spacing-unit;
    border-bottom: .1rem solid $color-details;
    margin-bottom: $spacing-unit;
  }

  .post-meta {
    text-align: center;
    font-size: $base-font-size * .75;
    color: $color-aux;
    font-style: italic;
    margin: $spacing-unit 0;
  }

  .post-content {
    figure {
      figcaption {
        font-style: italic;
        font-size: $base-font-size * .75;
        color: $color-aux;
      }
    }
  }
}

/*
    Site Footer
*/
.site-footer {
  border-top: .1rem solid $color-details;
  margin-top: $spacing-unit;
  padding-top: $spacing-unit * 2;
  margin-bottom: $spacing-unit * 2;

  .wrapper {
    @include row;

    .site-info {
      @include col(2,3);
      margin: 0;

      @include media-query($on-palm) {
        text-align: center;
      }

      dt {
        font-family: $title-font-family;
        font-weight: 800;
      }

      dd {
        font-size: $base-font-size * .75;
      }
    }

    .social-links {
      @include col(1,3);
      margin: 0;
      list-style: none;
      text-align: right;

      @include media-query($on-palm) {
        text-align: center;
      }

      li {
        display: inline-block;

        &:not(:last-child) {
          margin-right: $spacing-unit / 4;
        }

        svg {
          height: 2rem;
          width: 2rem;
          fill: $color-aux;
          transition: fill .35s ease;
        }

        a:hover,
        a:focus {
          svg {
            fill: $color-accent;
          }
        }
      }
    }
  }

  .site-credits {
    text-align: center;
    font-size: $base-font-size * .75;
    margin-top: $spacing-unit;
  }
}

